fixes dropdown on mobile

--- a/src/pages/Onboarding/Tasks/Tasks.scss
+++ b/src/pages/Onboarding/Tasks/Tasks.scss
@@ -17,5 +17,14 @@
         }
       }
     }
+
+    .dropdown-big .dropdown-big__options.bordered-options {
+      left: 0;
+      right: unset;
+
+      @media screen and (max-width: 575px) {
+        min-width: 280px;
+      }
+    }
   }
 }
